--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\Dlala\\AppData\\Local\\Programs\\Python\\Python35\\python.exe"
+    "python.pythonPath": "C:\\Users\\Dlala\\AppData\\Local\\Programs\\Python\\Python35\\python.exe",
+    "python.formatting.provider": "autopep8"
 }
